# readrtp

./: .gitignore  CMakeLists.txt  README.md  rtp.ksy
cmake/: AppRun.in  readrtp.desktop.in  readrtp.svg.in
include/readrtp/: apply.hpp  buffer.hpp  checksum.hpp  common.hpp  decompression.hpp  error.hpp  parse.hpp  patch_applier.hpp  types.hpp
src/: apply.cpp  buffer.cpp  checksum.cpp  decompression.cpp  error.cpp  parse.cpp  patch_applier.cpp  types.cpp
src/cli/: apply_main.cpp
tests/: CMakeLists.txt  test_apply.cpp  test_checksum.cpp  test_decompression.cpp  test_parse.cpp
